// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskColoring must show correct Risk level depending on the string passed as a prop: default 1`] = `
<RiskColoring
  displayValue=""
  risk=""
>
  <span
    className="badge"
    style={
      Object {
        "backgroundColor": "#6c757d",
      }
    }
  >
    <div>
      <p />
    </div>
  </span>
</RiskColoring>
`;

exports[`RiskColoring must show correct Risk level depending on the string passed as a prop: hight_risk 1`] = `
<RiskColoring
  displayValue=""
  risk="high"
>
  <span
    className="badge"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    <div>
      <p>
        high
      </p>
    </div>
  </span>
</RiskColoring>
`;

exports[`RiskColoring must show correct Risk level depending on the string passed as a prop: low_risk 1`] = `
<RiskColoring
  displayValue=""
  risk="low"
>
  <span
    className="badge"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    <div>
      <p>
        low
      </p>
    </div>
  </span>
</RiskColoring>
`;

exports[`RiskColoring must show correct Risk level depending on the string passed as a prop: not_set 1`] = `
<RiskColoring
  displayValue=""
  risk="not set"
>
  <span
    className="badge"
    style={
      Object {
        "backgroundColor": "#6c757d",
      }
    }
  >
    <div>
      <p>
        not set
      </p>
    </div>
  </span>
</RiskColoring>
`;

exports[`RiskColoring must show correct Risk level depending on the string passed as a prop: red_alert 1`] = `
<RiskColoring
  displayValue=""
  risk="red"
>
  <span
    className="badge"
    style={
      Object {
        "backgroundColor": "#6c757d",
      }
    }
  >
    <div>
      <p>
        red
      </p>
    </div>
  </span>
</RiskColoring>
`;
